@@ -373,7 +373,11 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 7629) Fix $wgBrowserBlackList to avoid false positive on MSIE
   when certain plugins are present which alter the user agent
 * (bug 9712) Use Arabic comma in date/time formats for Arabic and Farsi
-* (bug 9670) Follow redirects when render edit section links to transcluded templates.
+* (bug 9670) Follow redirects when render edit section links to transcluded
+  templates.
+* (bug 7958) Special:Cite of older version of an article should use old
+  version id.
+
 == Maintenance ==
 
 * New script maintenance/language/checkExtensioni18n.php used to check i18n
